test/zinc_source/compile_errors/iterations/06_dict_insert_mutation_during_iteration.zn
// expected-error: cannot mutate dict during iteration

fn main() {
    scores = sort_dict()
    scores["a"] = 1
    for key, value in scores {
        scores.insert("b", 2)
    }
}
